--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "cSpell.ignoreWords": ["andnot"],
-  "cSpell.words": ["addhar", "agge"],
+  "cSpell.words": ["addhar", "agge", "Chec"],
   "spellright.language": ["en"],
   "spellright.documentTypes": ["markdown", "latex", "plaintext"],
   "cSpell.customDictionaries": {
